# pydantic-mongo-types

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
pydantic_mongo_types/: __init__.py  bson.py  geojson.py
