[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydantic-mongo-types"
dynamic = ["version"]
description = 'Pydantic MongoDB types'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
  { name = "LEE HO YEOL", email = "rurouni24@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pydantic>=2.1.1,<3.0.0"
]

[project.urls]
Documentation = "https://github.com/hard-coders/pydantic-mongo-types#readme"
Issues = "https://github.com/hard-coders/pydantic-mongo-types/issues"
Source = "https://github.com/hard-coders/pydantic-mongo-types"

[tool.hatch.version]
path = "pydantic_mongo_types/__init__.py"


[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.isort]
known-first-party = ["pydantic_mongo_types", "pydantic"]

